@@ -85,14 +85,15 @@ public:
 
   virtual void uninstall_component (::Components::CCMObject_ptr cref);
 
-  virtual void
+  virtual ::Components::Cookie *
     connect_local_facet (::Components::CCMObject_ptr,
                          const char * ,
                          ::Components::CCMObject_ptr,
                          const char *);
 
   virtual void
-    disconnect_local_facet (::Components::CCMObject_ptr,
+    disconnect_local_facet (::Components::Cookie *,
+                            ::Components::CCMObject_ptr,
                             const char * ,
                             ::Components::CCMObject_ptr,
                             const char *);
