@@ -16,7 +16,8 @@ SERVER * CUTS_CCM_Container_T <T, SERVER, STRATEGY, SERVANT_BASE>::server (void)
 //
 template <typename T, typename SERVER, typename STRATEGY, typename SERVANT_BASE>
 CUTS_INLINE
-void CUTS_CCM_Container_T <T, SERVER, STRATEGY, SERVANT_BASE>::
+::Components::Cookie *
+CUTS_CCM_Container_T <T, SERVER, STRATEGY, SERVANT_BASE>::
 connect_local_facet (::Components::CCMObject_ptr,
                      const char * ,
                      ::Components::CCMObject_ptr,
@@ -31,7 +32,8 @@ connect_local_facet (::Components::CCMObject_ptr,
 template <typename T, typename SERVER, typename STRATEGY, typename SERVANT_BASE>
 CUTS_INLINE
 void CUTS_CCM_Container_T <T, SERVER, STRATEGY, SERVANT_BASE>::
-disconnect_local_facet (::Components::CCMObject_ptr,
+disconnect_local_facet (::Components::Cookie *,
+                        ::Components::CCMObject_ptr,
                         const char * ,
                         ::Components::CCMObject_ptr,
                         const char *)
